# manifold-remapping

./: .env.example  .gitignore  AGENTS.md  README.md  RESULTS.md  pyproject.toml
notebooks/0.data_overview/: 00_load_data.ipynb  01_data_statistics.ipynb  01_experiments_data_statistics.ipynb  02_neural_data_statistics.ipynb  03_firing_rate_decoding.ipynb
notebooks/1.embeddings/: 00_pca_manifold.ipynb  01_pca_manifolds_common_space.ipynb  02_tc_pca_vs_plssvd.ipynb  03_fam2_correlates.ipynb
scripts/: convert_csv_to_parquet.py
src/remapping/: __init__.py  alignments.py  config.py  dataset.py  decoders.py  metrics.py  plotting.py  processing.py
